Closed
Bug 1202421
Opened 11 years ago
Closed 11 years ago
Please rename the network.auth.allow-subresource-auth pref
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla43
People
(Reporter: Sylvestre, Assigned: dragana)
References
Details
(Keywords: dev-doc-complete)
Attachments
(1 file, 2 obsolete files)
|
10.40 KB,
patch
|
dragana
:
review+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
As mentioned by Felipe ( https://bugzilla.mozilla.org/show_bug.cgi?id=1201065#c3 ) and like bug 1202420, we need to rename the network.auth.allow-subresource-auth pref.
Otherwise, our users will be stuck.
This has to be done before 41 rc (Sept 14th)
| Reporter | ||
Comment 1•11 years ago
|
||
[Tracking Requested - why for this release]:
We don't want to ship without the old pref name.
Dragana, could you take care of that? Thanks
status-firefox41:
--- → affected
status-firefox42:
--- → affected
tracking-firefox41:
--- → ?
Flags: needinfo?(dd.mozilla)
| Assignee | ||
Comment 2•11 years ago
|
||
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Flags: needinfo?(dd.mozilla)
Attachment #8657848 -
Flags: review?(michal.novotny)
Comment 3•11 years ago
|
||
Comment on attachment 8657848 [details] [diff] [review]
bug_1202421.patch
Review of attachment 8657848 [details] [diff] [review]:
-----------------------------------------------------------------
I guess we need to change the pref name at all places. See http://mxr.mozilla.org/mozilla-central/search?string=allow-subresource-auth
Attachment #8657848 -
Flags: review?(michal.novotny) → review-
| Reporter | ||
Comment 4•11 years ago
|
||
And the doc too...
:(
| Assignee | ||
Comment 5•11 years ago
|
||
Thanks.
sorry that I forgot all that :)
Attachment #8657848 -
Attachment is obsolete: true
Attachment #8657878 -
Flags: review?(michal.novotny)
Updated•11 years ago
|
Attachment #8657878 -
Flags: review?(michal.novotny) → review+
| Comment hidden (obsolete) |
| Assignee | ||
Comment 7•11 years ago
|
||
| Assignee | ||
Comment 8•11 years ago
|
||
fix a typo.
Attachment #8657878 -
Attachment is obsolete: true
Attachment #8658130 -
Flags: review+
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed,
leave-open
Keywords: checkin-needed
Comment 11•11 years ago
|
||
Comment 12•11 years ago
|
||
Dragana, do you want to request an uplift to Beta for this one?
| Assignee | ||
Comment 13•11 years ago
|
||
Comment on attachment 8658130 [details] [diff] [review]
bug_1202421.patch
Approval Request Comment
[Feature/regressing bug #]: regression from bug 647010
[User impact if declined]: a hotfox has changed the pref value and this is needed for following releases.
[Describe test coverage new/current, TreeHerder]: It is only renaming a pref
[Risks and why]: low
[String/UUID change made/needed]: none
Flags: needinfo?(dd.mozilla)
Attachment #8658130 -
Flags: approval-mozilla-beta?
Attachment #8658130 -
Flags: approval-mozilla-aurora?
Comment 14•11 years ago
|
||
Comment on attachment 8658130 [details] [diff] [review]
bug_1202421.patch
Patch seems safe for uplift to Aurora42 and Beta41.
Attachment #8658130 -
Flags: approval-mozilla-beta?
Attachment #8658130 -
Flags: approval-mozilla-beta+
Attachment #8658130 -
Flags: approval-mozilla-aurora?
Attachment #8658130 -
Flags: approval-mozilla-aurora+
Comment 16•11 years ago
|
||
Updated the site compat doc: https://www.fxsitecompat.com/en-US/docs/2015/http-auth-dialog-can-no-longer-be-triggered-by-cross-origin-resources/
Keywords: dev-doc-complete
| Assignee | ||
Updated•11 years ago
|
Keywords: leave-open
| Assignee | ||
Updated•11 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 17•11 years ago
|
||
Dragana, this was never uplifted to 42. Any reason why? Could you fill the uplift request to 42? Thanks
Flags: needinfo?(dd.mozilla)
| Reporter | ||
Updated•11 years ago
|
| Assignee | ||
Comment 18•11 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #17)
> Dragana, this was never uplifted to 42. Any reason why? Could you fill the
> uplift request to 42? Thanks
There is request filled and also approved for both 42 and 41 (comment 14). I do not know why it has not been uplifted.
I will clean up flags and ask for approval for beta42 again.
Flags: needinfo?(dd.mozilla)
| Assignee | ||
Updated•11 years ago
|
Attachment #8658130 -
Flags: approval-mozilla-beta+
Attachment #8658130 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 19•11 years ago
|
||
Comment on attachment 8658130 [details] [diff] [review]
bug_1202421.patch
Approval Request Comment
[Feature/regressing bug #]: regression from bug 647010
[User impact if declined]: a hotfox has changed the pref value and this is needed for following releases.
[Describe test coverage new/current, TreeHerder]: It is only renaming a pref
[Risks and why]: low
[String/UUID change made/needed]: none
Attachment #8658130 -
Flags: approval-mozilla-beta?
| Reporter | ||
Comment 20•10 years ago
|
||
Comment on attachment 8658130 [details] [diff] [review]
bug_1202421.patch
thanks
Attachment #8658130 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
| Assignee | ||
Comment 21•10 years ago
|
||
putting checkin-needed just to be sure that this one is not missed for uplift, it was missed once already. (I do not remember needing to put checkin-needed for uplift)
Keywords: checkin-needed
Comment 22•10 years ago
|
||
Landed on current beta after some discussion on IRC:
https://hg.mozilla.org/releases/mozilla-beta/rev/f233ba0de1ba
Keywords: checkin-needed
Updated•10 years ago
|
Target Milestone: --- → mozilla43
Comment 23•10 years ago
|
||
I have reproduced this bug with Firefox Nightly 43.0a1 (Build ID: 20150907030206) on
windows 8.1 64-bit with the instructions from comment 0.
Verified as fixed with Firefox beta 43.0b7 (Build ID: 20151126120800)
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
QA Whiteboard: [testday-20151127]
You need to log in
before you can comment on or make changes to this bug.
Description
•