Bug 1202421 - Rename the network.auth.allow-subresource-auth pref. r=michal a=ritu